// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#cogs/cogs/radio <Cog /> With additional props Checked is a boolean matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <RadioField>
    <input
      accessKey="MOCK ACCESS KEY"
      checked={true}
      className="MOCK CLASSNAME"
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      required={true}
      tabIndex={1}
      type="radio"
      value="MOCK VALUE"
    />
  </RadioField>
  <RadioTitle>
    <label
      className="MOCK CLASSNAME"
      htmlFor="MOCK ID"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK TITLE
        </span>
      </TextContent>
      <Required>
        <span
          className="is-required"
        >
          *
        </span>
      </Required>
      <Disabled>
        <span
          className="is-disabled"
        >
          *
        </span>
      </Disabled>
      <ReadOnly>
        <span
          className="is-readonly"
        >
          *
        </span>
      </ReadOnly>
    </label>
  </RadioTitle>
  <RadioDescription>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK DESCRIPTION
        </span>
      </TextContent>
    </span>
  </RadioDescription>
  <RadioErrorMessage>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK ERROR MESSAGE
        </span>
      </TextContent>
    </span>
  </RadioErrorMessage>
</div>
`;

exports[`#cogs/cogs/radio <Cog /> With additional props Default checked is a boolean matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <RadioField>
    <input
      accessKey="MOCK ACCESS KEY"
      className="MOCK CLASSNAME"
      defaultChecked={true}
      disabled={true}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      required={true}
      tabIndex={1}
      type="radio"
      value="MOCK VALUE"
    />
  </RadioField>
  <RadioTitle>
    <label
      className="MOCK CLASSNAME"
      htmlFor="MOCK ID"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK TITLE
        </span>
      </TextContent>
      <Required>
        <span
          className="is-required"
        >
          *
        </span>
      </Required>
      <Disabled>
        <span
          className="is-disabled"
        >
          *
        </span>
      </Disabled>
      <ReadOnly>
        <span
          className="is-readonly"
        >
          *
        </span>
      </ReadOnly>
    </label>
  </RadioTitle>
  <RadioDescription>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK DESCRIPTION
        </span>
      </TextContent>
    </span>
  </RadioDescription>
  <RadioErrorMessage>
    <span
      className="MOCK CLASSNAME"
    >
      <TextContent>
        <span
          className="text-content"
        >
          MOCK ERROR MESSAGE
        </span>
      </TextContent>
    </span>
  </RadioErrorMessage>
</div>
`;

exports[`#cogs/cogs/radio <Cog /> With required props matches the snapshot 1`] = `
<div
  className="MOCK CLASSNAME"
>
  <RadioField>
    <input
      className="MOCK CLASSNAME"
      disabled={false}
      id="MOCK ID"
      name="MOCK NAME"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={false}
      required={false}
      type="radio"
      value="MOCK VALUE"
    />
  </RadioField>
  <RadioTitle />
  <RadioDescription />
  <RadioErrorMessage />
</div>
`;
